--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,18 +8,31 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 </head>
 <body>
-	<div class='main'>
-	
+<div class='container'>
+	<div class='row'>
+		<div class='col-md-offset-2 col-md-8'>
+			<h1 class='text-center'>App</h1>		
+		</div>
+	</div>	<div class='row'>
+		<div id='app' class='col-md-offset-2 col-md-8'>
+		
+		</div>
 	</div>
+</div>
 <!--libraries-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--custom scripts-->	
+	<script>
+	$(document).ready(function(){
+		console.log("jquery document load");
+	});
+	</script>
 	<script src="js/views.js"></script>
 	<script src="js/models.js"></script>
-	<script src="js/routes.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/routes.js"></script>
 </body>
 </html>
