added util module, worked on login and register pages, views, routes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
 	<title>Experimental Backbone</title>
     <link rel="icon" href="icon.png">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 </head>
 <body>
 <div class='container'>
@@ -30,6 +31,7 @@
 		console.log("jquery document load");
 	});
 	</script>
+	<script src="js/util.js"></script>
 	<script src="js/views.js"></script>
 	<script src="js/models.js"></script>
 	<script src="js/app.js"></script>
