used promises in place of callbacks, improvements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 <div class='container'>
 	<div class='row'>
 		<div class='col-md-offset-2 col-md-8'>
-			<h1 class='text-center'>App</h1>		
+			<h1 class='text-center'>Experimental</h1>		
 		</div>
 	</div>	<div class='row'>
 		<div id='app' class='col-md-offset-2 col-md-8'>
