added navbar, did some styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="icon.png">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
-<div class='container'>
+<div class='container-fluid'>
 	<div class='row'>
-		<div class='col-md-offset-2 col-md-8'>
-			<h1 class='text-center'>Experimental</h1>		
+		<div id="nav-box" class='col-md-12'>
 		</div>
 	</div>	<div class='row'>
 		<div id='app' class='col-md-offset-2 col-md-8'>
