--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,12 +14,23 @@
 	<div class='row'>
 		<div id="nav-box" class='col-md-12'>
 		</div>
-	</div>	<div class='row'>
+	</div>
+	<div class='row'>
 		<div id='app' class='col-md-offset-2 col-md-8'>
 		
 		</div>
 	</div>
 </div>
+
+<div id="nav-footer" class='text-center' style="position: absolute; bottom:0px; width:100%;">
+	<span class="text-muted">&copy;<a href="https://www.prahladyeri.com">Prahlad Yeri</a> 2018<span id='copyright-year-postfix'></span>. MIT License. <a href="https://github.com/prahladyeri/experimental-backbone">Fork on Github</a>.</span>
+</div>
+<script>
+	var cyrr = (new Date()).getFullYear();
+	if (cyrr != "2018") {
+		document.getElementById("copyright-year-postfix").innerHTML = "-" + cyrr;
+	}
+</script>
 <!--libraries-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
@@ -28,7 +39,7 @@
 <!--custom scripts-->	
 	<script>
 	$(document).ready(function(){
-		console.log("jquery document load");
+		//console.log("jquery document load");
 	});
 	</script>
 	<script src="js/util.js"></script>
