--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,24 +12,32 @@
 <body>
 <div class='container-fluid'>
 	<div class='row'>
-		<div id="nav-box" class='col-md-12'>
+		<div id="div-navbar" class='col-md-12'>
 		</div>
 	</div>
 	<div class='row'>
-		<div id='app' class='col-md-offset-2 col-md-8'>
+		<div id='div-main' class='col-md-offset-2 col-md-8'>
 		
 		</div>
 	</div>
-</div>
-
-<div id="nav-footer" class='text-center' style="position: absolute; bottom:0px; width:100%;">
-	<span class="text-muted">&copy;<a href="https://www.prahladyeri.com">Prahlad Yeri</a> 2018<span id='copyright-year-postfix'></span>. MIT License. <a href="https://github.com/prahladyeri/experimental-backbone">Fork on Github</a>.</span>
+	<div id="nav-footer" class='row navbar-fixed-bottom' style="">
+		<div class='col-md-4'>
+			<span class='text-danger pull-left'>Mode: <span class='text-danger' id='app-spn-mode'></span></span>
+		</div>
+		<div class='col-md-4'>
+			<span style="" class="text-muted">&copy;<a href="https://www.prahladyeri.com">Prahlad Yeri</a> 2018<span id='app-spn-year-postfix'></span>. MIT License. <a href="https://github.com/prahladyeri/experimental-backbone">Fork on Github</a>.</span>
+		</div>
+	</div>
 </div>
 <script>
-	var cyrr = (new Date()).getFullYear();
-	if (cyrr != "2018") {
-		document.getElementById("copyright-year-postfix").innerHTML = "-" + cyrr;
-	}
+	document.addEventListener("DOMContentLoaded", function(){
+		console.log('mode is ',app.config.mode);
+		document.getElementById("app-spn-mode").textContent = app.config.mode;
+		var cyrr = (new Date()).getFullYear();
+		if (cyrr != "2018") {
+			document.getElementById("app-spn-year-postfix").textContent = "-" + cyrr;
+		}
+	});
 </script>
 <!--libraries-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -37,15 +45,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--custom scripts-->	
-	<script>
-	$(document).ready(function(){
-		//console.log("jquery document load");
-	});
-	</script>
 	<script src="js/util.js"></script>
 	<script src="js/views.js"></script>
 	<script src="js/models.js"></script>
-	<script src="js/app.js"></script>
 	<script src="js/routes.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
