fixed initial loading

--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
 </div>
 <script>
 	document.addEventListener("DOMContentLoaded", function(){
-		console.log('mode is ',app.config.mode);
-		document.getElementById("app-spn-mode").textContent = app.config.mode;
-		document.getElementById("app-spn-version").textContent = app.version;
-		var cyrr = (new Date()).getFullYear();
-		if (cyrr != "2018") {
-			document.getElementById("app-spn-year-postfix").textContent = "-" + cyrr;
-		}
+		//console.log('mode is ',app.config.mode);
 	});
 </script>
 <!--libraries-->
