added spinner animation, fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Experimental Backbone</title>
+	<title></title>
     <link rel="icon" href="icon.png">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
-<div class='container-fluid'>
+<div class='container-fluid main'>
 	<div class='row navbar-wrapper'>
 		<div id="div-navbar" class='col-md-12'>
 		</div>
@@ -20,7 +20,7 @@
 		
 		</div>
 	</div>
-	<div id="nav-footer" class='row clearfix' style="">
+	<div id="nav-footer" class='row clearfix hidden show-on-start' style="">
 		<div class='col-md-4'>
 			<kbd class='pull-left'>Version: <span class='' id='app-spn-version'></span></kbd>
 		</div>
