--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!--custom scripts-->	
-	<script src="js/util.js"></script>
+	<script src="js/helper.js"></script>
 	<script src="js/views.js"></script>
 	<script src="js/models.js"></script>
 	<script src="js/data.js"></script>
